<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".playing.PlayingActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundAccent"
                android:padding="@dimen/cardview_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/playing_view_missions"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginBottom="@dimen/listview_padding"
                    android:id="@+id/missions_label" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/missions_listview"
                    android:layout_marginBottom="@dimen/listview_margin"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundAccentSecondary"
                    android:id="@+id/addMissionButton"
                    android:text="@string/add_mission"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundAccent"
                android:padding="@dimen/cardview_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/playing_view_players"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginBottom="@dimen/listview_padding"
                    android:id="@+id/persons_label" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/persons_listview"
                    android:layout_marginBottom="@dimen/listview_margin"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundAccentSecondary"
                    android:id="@+id/addPersonButton"
                    android:text="@string/add_person"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="App name"
            android:alpha="0.5"
            android:id="@+id/app_name"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/dkcc_author_credit"
            android:alpha="0.5"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>